ProjetCompil/Verif/Test/success/insertSort.cas
program
	A : array [1..10] of integer;
	i, j, value : integer;
begin
for i := 1 to 9 do
	value := A[i];
	j := i-1;
	wHILe (j >= 0 and A[j]) > value do
		A[j+1] := A[j];
		j := j-1;
	end;
	A[j+1] := value;
end;
end.
	
