ProjetCompil/Verif/Test/fail/typeNonCompatible14.cas
program
	A : array [1..14] of integer;
	B : array [1..14] of boolean;
	C : 1..10;
begin
	C := B / A;
end.
	
